Working on student UI #77

--- a/WebPortal/CodeACar/Views/Shared/_Layout.cshtml
+++ b/WebPortal/CodeACar/Views/Shared/_Layout.cshtml
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - CodeACar</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/css/site.css" />
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("Scripts", required: false)
 </head>
 <body>
     <header>
@@ -23,42 +28,33 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
- }
+                        }
                         else
                         {
                             @if (ViewData["role"].ToString() == "Admin")
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Home">Home</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="ManageTeachers">Teachers</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Manage">Teachers</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Challenge" asp-action="Manage">Challenge</a>
-                                </li>
- }
+                            }
                             else if (ViewData["role"].ToString() == "Teacher")
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Home">Home</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Challenge" asp-action="Index">Challenges</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Challenge" asp-action="Manage">Challenge</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="ManageStudents">Students</a>
                                 </li>
- }
+                            }
                             else
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Index">Home</a>
+                                    <a class="nav-link text-dark" asp-controller="Student" asp-action="Index">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Challenge" asp-action="Index">Challenge</a>
+                                    <a class="nav-link text-dark" asp-controller="ChallengeHistory" asp-action="Index">Challenge History</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Challenge" asp-action="History">Challenge History</a>
-                                </li>
-}}
+                            }}
                     </ul>
                     @if (ViewData.ContainsKey("role") && !string.IsNullOrEmpty(ViewData["role"].ToString()))
                     {
@@ -80,9 +76,5 @@
             &copy; 2021 - CodeACar - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @RenderSection("Scripts", required: false)
 </body>
 </html>
