--- a/WebPortal/CodeACar/Views/Student/PlayGame.cshtml
+++ b/WebPortal/CodeACar/Views/Student/PlayGame.cshtml
@@ -11,17 +11,24 @@
     <script src="~/lib/blockly/javascript_compressed.js"></script>
 }
 
+<div id="loading">
+  <p id="loading-image"><i class='fa fa-spinner fa-spin'></i> Running</p>
+</div>
 <div class="row">
     <div class="col-md-6 text-center mb-2">
         <img src="@Model.ChallengeImage" alt="mapImage" width="300" />
     </div>
     <div class="col-md-6">
         <div class="row">
-            <div class="col-md-10">
+            <div class="col-md-8">
                 <p class="text-justify">Solve the challenge by choosing your directions to form a list. Once done, hit the run button to move the car!</p>
             </div>
-            <div class="col-md-2">
-                <span class="btn btn-info btn-block" id="btnSubmit">Run</span>
+            <div class="col-md-4">
+                <button type="button" class="btn btn-info btn-block" id="btnSubmit">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle-fill" viewBox="0 0 16 16">
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z" />
+                    </svg> Run
+                </button>
             </div>
         </div>
         <div class="row">
@@ -45,7 +52,7 @@
 </div>
 
 <!--Start of Javascript Portion-->
-<script>
+<script type="text/javascript">
     var workspace = null;
     function setupBlockly()
     {
@@ -158,6 +165,7 @@
     setupBlockly();
     $(document).ready(function () {
         $('#btnSubmit').click(function () {
+            $('#loading').show();
             SubmitForm();
         });
 
