--- a/WebPortal/CodeACar/Views/User/Login.cshtml
+++ b/WebPortal/CodeACar/Views/User/Login.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Admin Login</h1>
+    <h1 class="display-4">User Login</h1>
 </div>
 <div class="col-md-6 mx-auto">
     @if (ViewData.ContainsKey("message"))
