updated create UI
Co-Authored-By: Matt1998 <20275365+Matt1998@users.noreply.github.com>

--- a/WebPortal/CodeACar/Views/Challenge/CreateChallenge.cshtml
+++ b/WebPortal/CodeACar/Views/Challenge/CreateChallenge.cshtml
@@ -5,7 +5,7 @@
     <p class="status-message"><i class='fa fa-spinner fa-pulse'></i> Creating</p>
 </div>
 <div class="status-message-box" id="create-success">
-    <p class="status-message"><i class="fas fa-check-double text-success"></i><br />Challenge Created!</p>
+    <p class="status-message"><i class="fas fa-check-circle text-success"></i><br />Challenge Created!</p>
 </div>
 <div class="status-message-box" id="create-failed">
     <p class="status-message"><i class="fas fa-exclamation-triangle text-danger"></i><br />Challenge Creation Failed!</p>
