--- a/WebPortal/CodeACar/Views/Challenge/EditChallenge.cshtml
+++ b/WebPortal/CodeACar/Views/Challenge/EditChallenge.cshtml
@@ -12,7 +12,7 @@
     <p class="status-message"><i class="fas fa-exclamation-circle text-danger"></i><br />Update Failed!</p>
 </div>
 <div class="status-message-box" id="deleting">
-    <p class="status-message"><i class="fas fa-slash fa-spin"></i> Deleting</p>
+    <p class="status-message"><i class="fa fa-spinner fa-pulse"></i> Deleting</p>
 </div>
 <div class="status-message-box" id="delete-success">
     <p class="status-message"><i class="fas fa-trash text-success"></i><br />Delete Successful!</p>
