--- a/WebPortal/CodeACar/Views/Student/PlayGame.cshtml
+++ b/WebPortal/CodeACar/Views/Student/PlayGame.cshtml
@@ -12,13 +12,13 @@
 }
 
 <div class="status-message-box" id="loading">
-  <p class="status-message" id="loading-message"><i class='fa fa-spinner fa-spin'></i> Running</p>
+  <p class="status-message"><i class='fa fa-spinner fa-pulse'></i> Running</p>
 </div>
 <div class="status-message-box" id="correct">
-  <p class="status-message" id="correct-message"><i class="fas fa-check-circle text-success"></i><br />Challenge Completed!</p>
+  <p class="status-message"><i class="fas fa-check-circle text-success"></i><br />Challenge Completed!</p>
 </div>
 <div class="status-message-box" id="wrong">
-  <p class="status-message" id="wrong-message-box"><i class="fas fa-times-circle text-danger"></i><br />Challenge Failed!</p>
+  <p class="status-message"><i class="fas fa-times-circle text-danger"></i><br />Challenge Failed!</p>
 </div>
 <div class="row">
     <div class="col-md-6 text-center mb-2">
