Update UI and flow

--- a/WebPortal/CodeACar/Views/Challenge/CreateChallenge.cshtml
+++ b/WebPortal/CodeACar/Views/Challenge/CreateChallenge.cshtml
@@ -2,13 +2,13 @@
     ViewData["Title"] = "Create New Challenge";
 }
 <div class="status-message-box" id="creating">
-    <p class="status-message"><i class='fa fa-spinner fa-pulse'></i> Creating</p>
+    <p class="status-message"><i class='fa fa-spinner fa-pulse status-message-icon'></i><br />Creating</p>
 </div>
 <div class="status-message-box" id="create-success">
-    <p class="status-message"><i class="fas fa-check-circle text-success"></i><br />Challenge Created!</p>
+    <p class="status-message"><i class="fas fa-check-circle text-success status-message-icon"></i><br />Challenge Created!</p>
 </div>
 <div class="status-message-box" id="create-failed">
-    <p class="status-message"><i class="fas fa-exclamation-triangle text-danger"></i><br />Challenge Creation Failed!</p>
+    <p class="status-message"><i class="fas fa-exclamation-triangle text-danger status-message-icon"></i><br />Challenge Creation Failed!</p>
 </div>
 <div class="row">
     <div class="col-md-3">
