--- a/WebPortal/CodeACar/Views/User/CreateUser.cshtml
+++ b/WebPortal/CodeACar/Views/User/CreateUser.cshtml
@@ -5,13 +5,13 @@
     ViewData["Title"] = $"Create New {titlePlaceholder}";
 }
 <div class="status-message-box" id="creating-user">
-    <p class="status-message"><i class='fa fa-spinner fa-pulse'></i> Creating</p>
+    <p class="status-message"><i class='fa fa-spinner fa-pulse status-message-icon'></i><br />Creating</p>
 </div>
 <div class="status-message-box" id="create-user-success">
-    <p class="status-message"><i class="fas fa-check-circle text-success"></i><br />User Created!</p>
+    <p class="status-message"><i class="fas fa-check-circle text-success status-message-icon"></i><br />User Created!</p>
 </div>
 <div class="status-message-box" id="create-user-failed">
-    <p class="status-message"><i class="fas fa-exclamation-triangle text-danger"></i><br />User Creation Failed!</p>
+    <p class="status-message"><i class="fas fa-exclamation-triangle text-danger status-message-icon"></i><br />User Creation Failed!</p>
 </div>
 <div class="row">
     <div class="col-md-3">
