--- a/WebPortal/CodeACar/Views/User/EditUser.cshtml
+++ b/WebPortal/CodeACar/Views/User/EditUser.cshtml
@@ -6,13 +6,13 @@
     ViewData["Title"] = $"Update New {titlePlaceholder}";
 }
 <div class="status-message-box" id="updating-user">
-    <p class="status-message"><i class="fas fa-sync-alt fa-spin"></i> Updating User</p>
+    <p class="status-message"><i class="fas fa-sync-alt fa-spin status-message-icon"></i><br />Updating User</p>
 </div>
 <div class="status-message-box" id="update-user-success">
-    <p class="status-message"><i class="far fa-check-circle text-success"></i><br />User Updated!</p>
+    <p class="status-message"><i class="far fa-check-circle text-success status-message-icon"></i><br />User Updated!</p>
 </div>
 <div class="status-message-box" id="update-user-failed">
-    <p class="status-message"><i class="fas fa-exclamation-circle text-danger"></i><br />User Update Failed!</p>
+    <p class="status-message"><i class="fas fa-exclamation-circle text-danger status-message-icon"></i><br />User Update Failed!</p>
 </div>
 </div>
 <div class="row">
