--- a/WebPortal/CodeACar/Views/Challenge/EditChallenge.cshtml
+++ b/WebPortal/CodeACar/Views/Challenge/EditChallenge.cshtml
@@ -3,22 +3,22 @@
     ViewData["Title"] = "Edit Challenge";
 }
 <div class="status-message-box" id="updating">
-    <p class="status-message"><i class="fas fa-sync-alt fa-spin"></i> Updating</p>
+    <p class="status-message"><i class="fas fa-sync-alt fa-spin status-message-icon"></i><br />Updating</p>
 </div>
 <div class="status-message-box" id="update-success">
-    <p class="status-message"><i class="far fa-check-circle text-success"></i><br />Update Successful!</p>
+    <p class="status-message"><i class="far fa-check-circle text-success status-message-icon"></i><br />Update Successful!</p>
 </div>
 <div class="status-message-box" id="update-failed">
-    <p class="status-message"><i class="fas fa-exclamation-circle text-danger"></i><br />Update Failed!</p>
+    <p class="status-message"><i class="fas fa-exclamation-circle text-danger status-message-icon"></i><br />Update Failed!</p>
 </div>
 <div class="status-message-box" id="deleting">
-    <p class="status-message"><i class="fa fa-spinner fa-pulse"></i> Deleting</p>
+    <p class="status-message"><i class="fa fa-spinner fa-pulse status-message-icon"></i><br />Deleting</p>
 </div>
 <div class="status-message-box" id="delete-success">
-    <p class="status-message"><i class="fas fa-trash text-success"></i><br />Delete Successful!</p>
+    <p class="status-message"><i class="fas fa-trash text-success status-message-icon"></i><br />Delete Successful!</p>
 </div>
 <div class="status-message-box" id="delete-failed">
-    <p class="status-message"><i class="fas fa-exclamation-circle text-danger"></i><br />Delete Failed!</p>
+    <p class="status-message"><i class="fas fa-exclamation-circle text-danger status-message-icon"></i><br />Delete Failed!</p>
 </div>
 <div class="row">
     <div class="col-md-3">
